Bug 1438051 - [Linux/GNOME] Use notify_notification_set_hint() to pair Firefox with a system notification, r=stransky

Based on patch by Corentin Noël <corentin@elementary.io>